--- a/frontend/stream.html
+++ b/frontend/stream.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
+        <div id="requests"></div>
         <h3>Profile stream - recent events</h3>
-        
+
         <div class="row">
             <div class="col-md-12">
                 <div></div>
